--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 </head>
 
 <body>
-    <!-- header    -->
+    <!-- HEADER    -->
     <header>
-
+        <h1>Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London Eye">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" alt="London Bridge">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Big Ben">
     </header>
-    <!-- end header -->
+    <!-- END HEADER -->
 
-    <!-- main -->
+    <!-- MAIN -->
     <main>
+
         <!-- my expenses -->
         <section></section>
         <!-- end my expenses -->
@@ -32,8 +36,9 @@
         <!-- my photos -->
         <section></section>
         <!-- end my photos -->
+
     </main>
-    <!-- end main -->
+    <!-- END MAIN -->
 
 
 </body>
