--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="London Eye">
         <img src="img/pexels-bill-emrich-230794-1.jpg" alt="London Bridge">
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="Big Ben">
+        <hr>
     </header>
     <!-- END HEADER -->
 
@@ -22,7 +23,45 @@
     <main>
 
         <!-- my expenses -->
-        <section></section>
+        <section>
+            <h3>Le mie spese</h3>
+            <!-- table expenses -->
+            <table>
+                <thead>
+                    <tr>
+                        <th>Numero</th>
+                        <th>Descrizione</th>
+                        <th>Costo</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Biglietto Aereo</td>
+                        <td>120€</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td>Totale</td>
+                        <td></td>
+                        <td>360€</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <!-- end table expenses -->
+            <hr>
+        </section>
         <!-- end my expenses -->
 
         <!-- things to do -->
