end things to do

--- a/index.html
+++ b/index.html
@@ -65,7 +65,18 @@
         <!-- end my expenses -->
 
         <!-- things to do -->
-        <section></section>
+        <section>
+            <h3>Cose da Fare</h3>
+            <!-- unordered list -->
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare greenwich &check;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+                <li>Mangiare il tipico Fish and Chips inglese&cross;</li>
+            </ul>
+            <!-- end unordered list -->
+            <hr>
+        </section>
         <!-- end things to do -->
 
         <!-- useful tips -->
