--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <!-- my expenses -->
         <section>
             <h3>Le mie spese</h3>
+
             <!-- table expenses -->
             <table>
                 <thead>
@@ -60,6 +61,7 @@
                 </tfoot>
             </table>
             <!-- end table expenses -->
+
             <hr>
         </section>
         <!-- end my expenses -->
@@ -67,6 +69,7 @@
         <!-- things to do -->
         <section>
             <h3>Cose da Fare</h3>
+
             <!-- unordered list -->
             <ul>
                 <li>Visitare la Tower of London &cross;</li>
@@ -75,12 +78,51 @@
                 <li>Mangiare il tipico Fish and Chips inglese&cross;</li>
             </ul>
             <!-- end unordered list -->
+
             <hr>
         </section>
         <!-- end things to do -->
 
         <!-- useful tips -->
-        <section></section>
+        <section>
+            <h3>Info Utili:</h3>
+
+            <!-- ordered list -->
+            <ol>
+
+                <!-- first point -->
+                <li>Numeri utili di emergenza
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Polizia</li>
+                        <li><strong>111</strong> - Assistenza medica</li>
+                    </ul>
+                </li>
+                <!-- end first point -->
+
+                <!-- secont point -->
+                <li>Hotel
+                    <ul>
+                        <li><strong>Nome Hotel:</strong>Buckingham palace</li>
+                        <li><strong>Indirizzo Hotel:</strong>Westmister, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <!-- end secont point -->
+
+                <!-- third point -->
+                <li>Aereo
+                    <ul>
+                        <li><strong>Volo di andata:</strong>Y1234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di ritorno:</strong>Y1236X, ore 18.30 da London Heatrow</li>
+                    </ul>
+                </li>
+                <!-- end third point -->
+
+            </ol>
+            <!-- end ordered list -->
+
+            <hr>
+        </section>
         <!-- end useful tips -->
 
         <!-- my photos -->
